--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,13 @@
         android:theme="@style/Theme.VolaitApp"
         tools:targetApi="31">
         <activity
+            android:name=".CuponsActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".PrivacidadeActivity"
             android:exported="false">
             <meta-data
